--- a/package.json
+++ b/package.json
@@ -24,18 +24,23 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
+    "date-fns": "2.29.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "react": "^19.1.0"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
