--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "2.29.3",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
-    "date-fns": "2.29.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
@@ -56,6 +56,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
