--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,11 @@ on:
     branches: [main, development]
   pull_request:
     branches: [main, development]
+    types: [closed]
 
 jobs:
   build-and-test:
+    if: github.event_name == 'push' 
     runs-on: ubuntu-latest
 
     steps:
@@ -26,10 +28,11 @@ jobs:
         run: npm run build
 
   deploy-prod:
-    if: github.ref == 'refs/heads/main'
-    needs: build-and-test
+    if: |
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.merged == true &&
+      github.base_ref == 'main'
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
@@ -43,10 +46,11 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
   deploy-dev:
-    if: github.ref == 'refs/heads/dev'
-    needs: build-and-test
+    if: |
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.merged == true &&
+      github.base_ref == 'development'
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
